UI fixes and bug squashes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,6 +70,12 @@ div.dataTables_paginate{
   float: none;
   text-align: center;
 }
+h1{
+  font-size: 20px;
+}
+}
+.dataTables_length label{
+  width: 100px;
 }
 
 .btn-blue {
